@@ -11,3 +11,10 @@ READLINE_FLAGS	=
 READLINE_LDFLAGS=	-lreadline -lncurses
 CXXFLAGS	=	-std=c++0x
 CFLAGS		=	-std=c99 -D_XOPEN_SOURCE=600
+
+# GCC and CLANG warning flags are not all equal; so disable warnings about unknown warnings
+GCCWARN += -Wno-unknown-warning-option
+GXXWARN += -Wno-unknown-warning-option
+
+# there are macros where we override initializers on purpose
+GCCWARN += -Wno-initializer-overrides
