@@ -221,10 +221,6 @@ DFLAGS		=	-MMD
 GCCWARN = -pedantic -Wall -W
 GXXWARN = -pedantic -Wall -W
 
-# GCC and CLANG warning flags are not all equal; so disable warnings about unknown warnings
-GCCWARN += -Wno-unknown-warning-option -Wno-unknown-warning
-GXXWARN += -Wno-unknown-warning-option -Wno-unknown-warning
-
 # enable more warnings that are not in -Wall -W (probably in -Wextra, but we don't seem to use that)
 GCCWARN += -Wpointer-arith -Wcast-align -Wwrite-strings -Wshadow -Wredundant-decls -Wdisabled-optimization \
            -Wsign-compare -Wstrict-prototypes -Wmissing-declarations -Wmissing-prototypes -Wdeclaration-after-statement
@@ -234,9 +230,6 @@ GXXWARN += -Wpointer-arith -Wcast-align -Wwrite-strings -Wshadow -Wredundant-dec
 # disable some warning that would be too much effort to fix, disfigure the code, or produce too many false positive
 GCCWARN += -Wno-long-long -Wno-unknown-pragmas -Wno-unused-parameter -Wno-override-init -Wno-uninitialized -Wno-maybe-uninitialized
 GXXWARN += -Wno-long-long -Wno-unknown-pragmas -Wno-unused-parameter -Wno-strict-overflow
-
-# there are macros where we override initializers on purpose
-GCCWARN += -Wno-initializer-overrides
 
 ifeq ($(SHARED),true)
 LIBTYPE		=	shared
